# design-research-experiments

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml  examples.yml  update-release-readme.yml  workflow.yml
docs/: README.md  api.rst  artifact_contract.rst  automation_baseline.rst  cli_reference.rst  concepts.rst  conf.py  dependencies_and_extras.rst  examples_and_recipes.rst  index.rst  installation.rst  quickstart.rst  study_structure_example.rst  typical_workflow.rst  vscode_start.rst
docs/_static/: color_mode_favicon.js  custom.css
docs/examples/: index.rst
docs/examples/core/: basic_usage.rst  index.rst  mechanical_design_recipe_portfolio.rst  monty_hall_simulation.rst  public_api_walkthrough.rst  real_stack_interoperability.rst
docs/examples/doe/: doe_capabilities.rst  index.rst
docs/examples/recipes/: index.rst  recipe_optimization_benchmark_run.rst  recipe_overview.rst  recipe_prompt_framing_run.rst  recipe_strategy_comparison_run.rst
docs/guides/: index.rst
docs/reference/: index.rst
docs/reference/api/: core_study_model.rst  design_and_execution.rst  recipes_and_bundles.rst  reporting_and_exports.rst
examples/: README.md  basic_usage.py  doe_capabilities.py  mechanical_design_recipe_portfolio.py  monty_hall_simulation.py  public_api_walkthrough.py  real_stack_interoperability.py  recipe_grammar_scaffold_run.py  recipe_optimization_benchmark_run.py  recipe_overview.py  recipe_prompt_framing_run.py  recipe_strategy_comparison_run.py
scripts/: check_docs_consistency.py  check_example_api_coverage.py  generate_coverage_badge.py  generate_example_docs.py  generate_examples_badges.py  generate_examples_metrics.py  update_release_readme.py
src/design_research_experiments/: __init__.py  artifacts.py  bundles.py  cli.py  conditions.py  designs.py  hypotheses.py  metrics.py  recipes.py  reporting.py  runners.py  schemas.py  study.py
src/design_research_experiments/adapters/: __init__.py  agents.py  analysis.py  problems.py
src/design_research_experiments/io/: __init__.py  csv_io.py  json_io.py  sqlite_io.py  yaml_io.py
tests/: helpers.py  test_adapters_and_reporting.py  test_artifacts.py  test_cli_and_examples.py  test_conditions.py  test_conditions_and_designs_extended.py  test_core.py  test_designs.py  test_docs_consistency.py  test_doe_capabilities.py  test_hypotheses_metrics_and_helpers.py  test_io_study_schemas_and_runners.py  test_public_api.py  test_recipes.py
